--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
-
 {
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
-},
-"keywords": [],
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -19,7 +18,7 @@
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mailtrap": "^3.0.1",
